flashing bug on iOS

--- a/src/Components/dashboard/dashboard.css
+++ b/src/Components/dashboard/dashboard.css
@@ -404,3 +404,11 @@
   background: white;
   z-index: -1;
 }
+
+.animations_Reveal4 {
+  opacity: 0;
+}
+
+.animations_Reveal3 {
+  opacity: 0;
+}
