--- a/src/app.css
+++ b/src/app.css
@@ -107,3 +107,11 @@ body {
     width: 12vw;
   }
 }
+
+.animations_reveal {
+  opacity: 0;
+}
+
+.animations_reveal2 {
+  opacity: 0;
+}
